web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-airflow
  namespace: airflow
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging

spec:
  ingressClassName: nginx
  rules:
    - host: mywebpage.com
      http:
        paths:
          - backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mywebpage.com
